# C--

./: .gitignore
Trabalho!Bimestre/: trabalho1bimestre.cpp
algorithm/: algorthm.cpp
exercicio4/: exercicio4.cpp
exercicio5/: exercicio5.cpp
four-threads/: 4threads.cpp
fraseThreads/: fthreads.cpp
integral/: integral.cpp
primos/: primos.cpp
teste/: teste_omp_threads.cpp
trabalho-1-bimestre/: Prova1B.cpp  Prova_JoseEduardo_MatheusDrula.cpp  teste.txt
trabalho-2-bimestre/: CMakeLists.txt  CMakePresets.json  trab2bim.cpp
trabalho2bim/: CMakePresets.json  trab2bim.cpp
